update image assets

--- a/pieces/tinkerers_aquarium.html
+++ b/pieces/tinkerers_aquarium.html
@@ -88,18 +88,18 @@
             <div class="row">
                <div class="col s12 m8" style="padding:25px">
                  <div class="carousel">
-                    <a class="carousel-item" href="#one!"><img src="../assets/images/commission/1.jpg"></a>
-                    <a class="carousel-item" href="#two!"><img src="../assets/images/commission/2.jpg"></a>
-                    <a class="carousel-item" href="#three!"><img src="../assets/images/commission/3.jpg"></a>
-                    <a class="carousel-item" href="#four!"><img src="../assets/images/commission/4.jpg"></a>
-                    <a class="carousel-item" href="#five!"><img src="../assets/images/commission/5.jpg"></a>
-                    <a class="carousel-item" href="#six!"><img src="../assets/images/commission/6.jpg"></a>
-                    <a class="carousel-item" href="#seven!"><img src="../assets/images/commission/7.jpg"></a>
+                    <a class="carousel-item" href="#one!"><img src="../assets/images/commission_thomas/1.jpg"></a>
+                    <a class="carousel-item" href="#two!"><img src="../assets/images/commission_thomas/2.jpg"></a>
+                    <a class="carousel-item" href="#three!"><img src="../assets/images/commission_thomas/3.jpg"></a>
+                    <a class="carousel-item" href="#four!"><img src="../assets/images/commission_thomas/4.jpg"></a>
+                    <a class="carousel-item" href="#five!"><img src="../assets/images/commission_thomas/5.jpg"></a>
+                    <a class="carousel-item" href="#six!"><img src="../assets/images/commission_thomas/6.jpg"></a>
+                    <a class="carousel-item" href="#seven!"><img src="../assets/images/commission_thomas/7.jpg"></a>
                  </div>
                </div>
                <div class="col s12 m4" style="padding:25px">
                   <h5 style="color: #ff00ffff; border-bottom: 1px solid #ff00ffff;">Tinkerer's Aquarium (2021)</h5>
-                  <p class="light">A commission containing a raspberry pi, an interactive television, an oscilloscope and a video monitor.</p>
+                  <p class="light">A commission_thomas containing a raspberry pi, an interactive television, an oscilloscope and a video monitor.</p>
                </div>
             </div>
          </div>
