--- a/pieces/tinkerers_aquarium.html
+++ b/pieces/tinkerers_aquarium.html
@@ -87,15 +87,33 @@
 
             <div class="row">
                <div class="col s12 m8" style="padding:25px">
-                 <div class="carousel">
-                    <a class="carousel-item" href="#one!"><img src="../assets/images/commission_thomas/1.jpg"></a>
-                    <a class="carousel-item" href="#two!"><img src="../assets/images/commission_thomas/2.jpg"></a>
-                    <a class="carousel-item" href="#three!"><img src="../assets/images/commission_thomas/3.jpg"></a>
-                    <a class="carousel-item" href="#four!"><img src="../assets/images/commission_thomas/4.jpg"></a>
-                    <a class="carousel-item" href="#five!"><img src="../assets/images/commission_thomas/5.jpg"></a>
-                    <a class="carousel-item" href="#six!"><img src="../assets/images/commission_thomas/6.jpg"></a>
-                    <a class="carousel-item" href="#seven!"><img src="../assets/images/commission_thomas/7.jpg"></a>
+                 <div class="carousel carousel-slider center">
+                   <div class="carousel-item" href="#one!">
+                     <img src="../assets/images/commission_thomas/1.jpg">
+                   </div>
+                   <div class="carousel-item" href="#two!">
+                     <img src="../assets/images/commission_thomas/2.jpg">
+                   </div>
+                   <div class="carousel-item" href="#three!">
+                     <img src="../assets/images/commission_thomas/3.jpg">
+                   </div>
+                   <div class="carousel-item" href="#four!">
+                     <img src="../assets/images/commission_thomas/4.jpg">
+                   </div>
+                   <div class="carousel-item" href="#one!">
+                     <img src="../assets/images/commission_thomas/5.jpg">
+                   </div>
+                   <div class="carousel-item" href="#two!">
+                     <img src="../assets/images/commission_thomas/6.jpg">
+                   </div>
+                   <div class="carousel-item" href="#three!">
+                     <img src="../assets/images/commission_thomas/7.jpg">
+                   </div>
+                   <div class="carousel-item" href="#four!">
+                     <img src="../assets/images/commission_thomas/8.jpg">
+                   </div>
                  </div>
+      
                </div>
                <div class="col s12 m4" style="padding:25px">
                   <h5 style="color: #ff00ffff; border-bottom: 1px solid #ff00ffff;">Tinkerer's Aquarium (2021)</h5>
@@ -128,7 +146,11 @@
       <script src="../assets/js/init.min.js"></script>
       <script>
       $(document).ready(function() {
-       $('.carousel').carousel();
+        $('.carousel.carousel-slider').carousel({
+    fullWidth: true,
+    indicators: true
+  });
+
      });
 
         var spans = ['T', 'i', 'n', 'k', 'e', 'r', 'e', 'r', "'", 's', ' ', 'A', 'q', 'u', 'a', 'r', 'i', 'u', 'm']
